Internal compiler error in skia Transform_inl.h
Categories
(Core :: Graphics, defect, P5)
Tracking
()
People
(Reporter: msirringhaus, Assigned: lsalzman)
Details
Attachments
(1 file)
|
815 bytes,
patch
|
lsalzman
:
review+
RyanVM
:
approval-mozilla-esr68+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:67.0) Gecko/20100101 Firefox/67.0
Steps to reproduce:
Compiling Firefox 68esr from source (mozilla-esr68) on s390x and i586 with GCC 7.4
Actual results:
Internal compiler error in gfx/skia/skia/third_party/skcms/src/Transform_inl.h in exec_ops().
There is a comment in that file stating that this happens for MIPS 64 and GCC.
I extended this check to s390x and the i*86-family. Now it builds.
Added the patch.
If this is acceptable, please consider uplifting this to mozilla-esr68.
Expected results:
Clean build.
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Comment 1•6 years ago
|
||
:lsalzman , I received "abort: bad hunk #1 @@ -559,7 +559,7 @@" when importing the patch
| Assignee | ||
Updated•6 years ago
|
| Reporter | ||
Comment 3•6 years ago
|
||
Whoops, sorry that should be @@ -559,7 +559,8 @@.
Comment 4•6 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 5•6 years ago
|
||
Any possibility to get this uplifted into the 68esr branch?
| Assignee | ||
Comment 6•6 years ago
|
||
Comment on attachment 9075372 [details] [diff] [review]
mozilla-gcc-internal-compiler-error.patch
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration:
- User impact if declined: Not able to build on tier-3 Linux platforms due to GCC errors.
- Fix Landed on Version: 69
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Just works around GCC build issues on tier-3. Doesn't affect other builds at all.
- String or UUID changes made by this patch:
Comment 7•6 years ago
|
||
Comment 8•6 years ago
|
||
| bugherder uplift | ||
Description
•