cliqz: Fixes builds in i386 platform.

NetBSD/i386 build were broken due to an internal compiler error when compiling with gcc.

Upstream bug report - https://bugzilla.mozilla.org/show_bug.cgi?id=1562886